--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulário de Matrícula</title>
-    
+
     <link rel="stylesheet" href="styles/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Alice&family=Archivo:ital,wght@0,100..900;1,100..900&family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <main>
+        <div class="main-container">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro saepe provident numquam voluptatem illo non error nisi harum delectus? Dolor odit officiis non nostrum modi illo placeat asperiores quos! Nostrum?
+        Provident, placeat. Quas eum reiciendis voluptatibus corrupti minus ea nesciunt quod molestias, harum, assumenda ipsa! Esse eum harum, nihil hic provident explicabo ab minima distinctio corporis ullam unde fugit consequatur.
+        Iure facere consectetur tempora, commodi quos similique alias omnis officia ratione eligendi quidem hic possimus suscipit eveniet repellat repellendus numquam nisi autem rerum sunt illum veniam quod! Distinctio, cum fugiat.
+        Sed, facilis. Fuga impedit aliquam dolore officia voluptatibus molestiae aspernatur, necessitatibus error, autem sunt doloribus dolor ipsa assumenda, quod dicta eius sit ad magnam. Impedit modi tenetur laborum nihil eveniet!
+        Ut nesciunt veritatis veniam placeat aut! Culpa accusantium dolor, dolores porro nulla animi, doloribus vel deserunt ratione et excepturi, id error! Dignissimos dolor sapiente ducimus iste error. Necessitatibus, debitis minus?
+        Eum et tempora cupiditate labore voluptates quo harum nostrum. Iusto corrupti consequuntur esse quibusdam perspiciatis cumque. Dicta quaerat quis aperiam optio unde harum minus fugit laudantium incidunt totam, doloribus rem?
+        Delectus rerum voluptatibus quidem esse minus optio ad nulla enim magni cum totam reiciendis, illum expedita aperiam dolore dolores. Culpa accusantium nihil voluptas vel. Maxime sapiente quibusdam placeat ipsum corporis?
+        Reiciendis at, minus, ad voluptas accusamus quos ea maiores, eaque nesciunt ab aliquid! Ipsam minus adipisci distinctio quae sit? Minus reprehenderit saepe, qui ut pariatur id accusantium rem tempore laboriosam?
+        Commodi pariatur excepturi quidem voluptatem? Ipsam dolorum recusandae incidunt modi, assumenda ea iure tempora optio ipsum quis. Doloremque, porro officia. Tempora labore consequuntur, assumenda distinctio velit nobis consequatur odit dolor!
+        Quidem minima inventore alias explicabo sed blanditiis illum libero, suscipit eos, adipisci iusto nulla illo perspiciatis? Esse deleniti quod amet obcaecati, soluta quas labore omnis a maiores ipsam dolorum reprehenderit?</div>
+      </main>
+      <aside>
+        <div class="aside-container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, animi. Temporibus alias sint at? Incidunt, pariatur amet ab praesentium optio deserunt consequuntur iste itaque provident maxime nihil quae, autem quia.
+        Incidunt atque recusandae impedit saepe qui voluptatibus laudantium tempora fugiat officiis? Dicta perferendis reiciendis numquam, libero architecto ratione itaque exercitationem molestiae vitae nisi. Consequatur vero rem suscipit quasi distinctio deserunt?
+        Molestias quas cumque consequatur numquam itaque harum dignissimos dolore qui omnis quidem deserunt ut ducimus quos cum minima, optio, facilis modi laborum dicta saepe beatae distinctio. Quibusdam quasi possimus vel?
+        Quaerat asperiores sapiente magni voluptate repellendus odio ipsum, laborum mollitia alias assumenda voluptatem iste tempore commodi beatae hic possimus voluptates cumque, velit maxime est? Enim soluta eum ut recusandae architecto!
+        Distinctio repellat ut, quibusdam minima provident dicta neque iusto omnis necessitatibus? Incidunt dicta hic nesciunt eaque, quia delectus sint doloremque praesentium tenetur magnam illo ut a odit, quis autem dolore.</div>
+      </aside>
+    </div>
+  </body>
 </html>
