--- a/index.html
+++ b/index.html
@@ -27,23 +27,80 @@
             Preencha os dados abaixo para matricular seu filho na escola
             infantil Estrelas do Amanhã.
           </p>
+
+          <form method="post" enctype="multipart/form-data">
+            <fildset class="child-info">
+              <legend>Informações da criança</legend>
+
+              <div class="input-wrapper">
+                <label for="fullname">Nome Completo</label>
+                <input 
+                  id="fullname" 
+                  type="text"
+                  placeholder="Ex: Luiz Fernando" />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="birth">Data de Nascimento</label>
+                <input 
+                  id="birth" 
+                  type="date"
+                  lang="pt-br"/>
+              </div>
+
+              <div class="select-wrapper">
+                <label for="gender">Sexo</label>
+                <select name="gender" id="gender">
+                  <option value="female">Feminino</option>
+                  <option value="male">Masculino</option>
+                  <option value="na">Prefiro não responder</option>
+                </select>
+              </div>
+
+              <div class="textarea-wraper">
+                <label for="medical-info">Informações Médicas</label>
+                <textarea
+                  name="medical-info" 
+                  id="medical-info"
+                  cols="30"
+                  rows="10"
+                  placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, especifique.)">
+                </textarea>
+              </div>
+
+              <div class="droparea-wrapper">
+                <input type="file" id="birth-file" name="birth-file">
+                <img src="assets/icons/cloud-upload.svg" alt="">
+                <p>
+                  Clique aqui para <br>
+                  selecionar os arquivos
+                </p>
+              </div>
+
+            </fildset>
+          </form>
         </div>
       </main>
+
       <aside>
         <div class="aside-container">
           <header>
-            <img src="assets/logo.svg" alt="Logo Estrelas do Amanhã">
+            <img src="assets/logo.svg" alt="Logo Estrelas do Amanhã" />
             <h2>
-              Porque cada momento de 
-              <span>
-                aprendizado
-              </span>
+              Porque cada momento de
+              <span> aprendizado </span>
               conta
             </h2>
-            <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+            <p>
+              Inscreva seu filho em nossa escola e veja-o florescer em um
+              ambiente acolhedor, seguro e estimulante.
+            </p>
           </header>
 
-          <img src="assets/Illustration.svg" alt="Professora sentada em rodas com crianças">
+          <img
+            src="assets/Illustration.svg"
+            alt="Professora sentada em rodas com crianças"
+          />
         </div>
       </aside>
     </div>
