--- a/index.html
+++ b/index.html
@@ -226,6 +226,68 @@
                   </div>
                 </div>
               </div>
+
+              <div>
+                <label for="">Em qual esporte você gostaria de inscrever seu filho?</label>
+              </div>
+              
+              <div class="input-wrapper">
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="football">
+                    <img src="assets/icons/football.svg" alt="ícone de futebol">
+                    <label for="football">Futebol</label>
+                  </div>
+                </div>
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="basketball">
+                    <img src="assets/icons/basketball-02.svg" alt="ícone de basquete">
+                    <label for="basketball">Basquete</label>
+                  </div>
+                </div>
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="swimming">
+                    <img src="assets/icons/swimming.svg" alt="ícone de Natação">
+                    <label for="swimming">Natação</label>
+                  </div>
+                </div>
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="yoga">
+                    <img src="assets/icons/yoga-02.svg" alt="ícone de yoga">
+                    <label for="yoga">Yoga</label>
+                  </div>
+                </div>
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="volleyball">
+                    <img src="assets/icons/volleyball.svg" alt="ícone de volleyball">
+                    <label for="volleyball">Vôlei</label>
+                  </div>
+                </div>
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="boxing">
+                    <img src="assets/icons/boxing-glove-01.svg" alt="ícone de boxing">
+                    <label for="boxing">Yoga</label>
+                  </div>
+                </div>
+              </div>
+              
             </fieldset>
           </form>
         </div>
