--- a/index.html
+++ b/index.html
@@ -289,6 +289,14 @@
               </div>
               
             </fieldset>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms">
+              <label for="terms">
+                Declaro que li e concordo com os <strong> Termos e Condições</strong> e com a <strong> Política de Privacidade</strong> da escola Estrelas do Amanhã.
+              </label>
+            </div>
           </form>
         </div>
       </main>
